Remove dependency on Compat

--- a/Project.toml
+++ b/Project.toml
@@ -3,9 +3,14 @@ uuid = "1907e7ba-7586-4310-a2ba-dd01462aeb50"
 authors = ["Éric Thiébaut <eric.thiebaut@univ-lyon1.fr>"]
 version = "0.1.0"
 
+[compat]
+julia = "1.0, 1.1"
+
 [deps]
-Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
+[extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
