--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,7 @@ authors = ["Éric Thiébaut <eric.thiebaut@univ-lyon1.fr>"]
 version = "0.1.0"
 
 [compat]
-julia = "1.0, 1.1"
+julia = "1.0, 1.1, 1.2"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
