--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,13 @@ notifications:
 codecov: true
 
 coveralls: true
+
+jobs:
+  include:
+    - stage: "Documentation"
+      julia: 1.0
+      os: linux
+      script:
+        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.build("TwoDimensional"); Pkg.instantiate()'
+        - julia --project=docs/ docs/make.jl
+      after_success: skip
