--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,10 +1,11 @@
 SOURCES = \
-   src/AffineTransforms.md \
-   src/BoundingBoxes.md \
-   src/index.md \
-   src/install.md \
-   src/Points.md \
-   src/reference.md
+    make.jl \
+    src/AffineTransforms.md \
+    src/BoundingBoxes.md \
+    src/index.md \
+    src/install.md \
+    src/Points.md \
+    src/reference.md
 
 default: build/index.html
 
