--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,12 @@ jobs:
     - julia: nightly
   include:
     - stage: "Documentation"
-      julia: 1.0
+      julia: 1.4
       os: linux
       script:
-        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.build("TwoDimensional"); Pkg.instantiate()'
+        - julia --project=docs/ -e 'using Pkg;
+                                    Pkg.develop(PackageSpec(path=pwd()));
+                                    Pkg.build("TwoDimensional");
+                                    Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
       after_success: skip
