--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ julia = "1.0, 1.1, 1.2, 1.3, 1.4"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Graphics = "a2bd30eb-e257-5431-a919-1863eab51364"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
