--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,10 @@
 name = "TwoDimensional"
 uuid = "1907e7ba-7586-4310-a2ba-dd01462aeb50"
 authors = ["Éric Thiébaut <eric.thiebaut@univ-lyon1.fr>"]
-version = "0.2.0"
+version = "0.2.1"
 
 [compat]
-julia = "1.0, 1.1, 1.2, 1.3, 1.4"
+julia = "1.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
