--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "TwoDimensional"
 uuid = "1907e7ba-7586-4310-a2ba-dd01462aeb50"
-authors = ["Éric Thiébaut <eric.thiebaut@univ-lyon1.fr>"]
+authors = ["Éric Thiébaut <https://github.com/emmt>"]
 version = "0.2.1"
 
 [compat]
