--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,7 @@ authors = ["Éric Thiébaut <https://github.com/emmt>"]
 version = "0.3.0"
 
 [compat]
-julia = "1.0"
+julia = "0.7, 1.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
