--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,7 @@
 # Documentation: https://github.com/JuliaCI/Appveyor.jl
 environment:
   matrix:
+    - julia_version: 0.7
     - julia_version: 1.0
     - julia_version: 1.1
     - julia_version: 1.2
@@ -9,6 +10,7 @@ environment:
     - julia_version: 1.5
     - julia_version: 1.6
     - julia_version: 1.7
+    - julia_version: 1.8
     - julia_version: nightly
 platform:
   - x64
