--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ Unitless = "c904d999-9673-4878-a3dd-e3ef1851788a"
 [compat]
 #TypeUtils = "0.3"
 Unitless = "2.1"
-julia = "0.7, 1"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
