--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -11,11 +11,12 @@ jobs:
   build:
     permissions:
       contents: write
+      pull-requests: read
       statuses: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: julia-actions/setup-julia@v2
+      - uses: julia-actions/setup-julia@v1
         with:
           version: '1.6'
       - uses: julia-actions/cache@v1
