--- a/Project.toml
+++ b/Project.toml
@@ -18,11 +18,13 @@ TwoDimensionalOffsetArraysExt = "OffsetArrays"
 OffsetArrays = "1"
 Requires = "1"
 TypeUtils = "1.3"
+Unitful = "1"
 julia = "1"
 
 [extras]
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [targets]
-test = ["Test", "OffsetArrays"]
+test = ["Test", "Unitful", "OffsetArrays"]
