--- a/Project.toml
+++ b/Project.toml
@@ -5,26 +5,16 @@ version = "0.5.1"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 TypeUtils = "c3b1956e-8857-4d84-9b79-890df85b1e67"
 
-[weakdeps]
-OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
-
-[extensions]
-TwoDimensionalOffsetArraysExt = "OffsetArrays"
-
 [compat]
-OffsetArrays = "1"
-Requires = "1"
-TypeUtils = "1.3"
+TypeUtils = "1.4"
 Unitful = "1"
 julia = "1"
 
 [extras]
-OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [targets]
-test = ["Test", "Unitful", "OffsetArrays"]
+test = ["Test", "Unitful"]
