--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,8 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 TypeUtils = "c3b1956e-8857-4d84-9b79-890df85b1e67"
 
 [compat]
+LinearAlgebra = "<0.0.1, 1"
+Test = "<0.0.1, 1"
 TypeUtils = "1.10"
 Unitful = "1"
 julia = "1"
